[gd_scene load_steps=6 format=2]

[ext_resource path="res://Roboto-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://image/UI side/icons/exportImageBg_2.png" type="Texture" id=2]
[ext_resource path="res://scripts/exportImagePanel.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="ViewportTexture" id=3]
viewport_path = NodePath("minViewport")

[node name="row" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -260.0
rect_min_size = Vector2( 0, 340 )
script = ExtResource( 3 )

[node name="Label" type="Label" parent="."]
margin_right = 1024.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
custom_fonts/font = SubResource( 2 )
text = "Export Image"
align = 1
valign = 1

[node name="Control" type="Control" parent="."]
margin_top = 54.0
margin_right = 1024.0
margin_bottom = 244.0
rect_min_size = Vector2( 0, 190 )

[node name="CenterContainer2" type="CenterContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 190 )

[node name="ColorRect" type="TextureRect" parent="Control/CenterContainer2"]
margin_left = 417.0
margin_right = 607.0
margin_bottom = 190.0
rect_min_size = Vector2( 190, 190 )
texture = ExtResource( 2 )
expand = true

[node name="CenterContainer" type="CenterContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TextureRect" type="TextureRect" parent="Control/CenterContainer"]
margin_left = 417.0
margin_right = 607.0
margin_bottom = 190.0
rect_min_size = Vector2( 190, 190 )
texture = SubResource( 3 )
expand = true

[node name="HBoxContainer3" type="HBoxContainer" parent="."]
margin_top = 248.0
margin_right = 1024.0
margin_bottom = 272.0
rect_min_size = Vector2( 0, 20 )
custom_constants/separation = 4
alignment = 1

[node name="Label" type="Label" parent="HBoxContainer3"]
margin_left = 410.0
margin_top = 5.0
margin_right = 445.0
margin_bottom = 19.0
text = "width"

[node name="width" type="LineEdit" parent="HBoxContainer3"]
margin_left = 449.0
margin_right = 507.0
margin_bottom = 24.0

[node name="Label2" type="Label" parent="HBoxContainer3"]
margin_left = 511.0
margin_top = 5.0
margin_right = 551.0
margin_bottom = 19.0
text = "height"

[node name="height" type="LineEdit" parent="HBoxContainer3"]
margin_left = 555.0
margin_right = 613.0
margin_bottom = 24.0

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
margin_top = 276.0
margin_right = 1024.0
margin_bottom = 296.0
rect_min_size = Vector2( 0, 20 )
custom_constants/separation = 20
alignment = 1

[node name="Button" type="Button" parent="HBoxContainer2"]
margin_left = 491.0
margin_right = 532.0
margin_bottom = 20.0
rect_min_size = Vector2( 30, 0 )
focus_mode = 0
enabled_focus_mode = 0
text = "Save"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_top = 300.0
margin_right = 1024.0
margin_bottom = 320.0
custom_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="HBoxContainer"]
margin_left = 426.0
margin_top = 3.0
margin_right = 537.0
margin_bottom = 17.0
text = "Background Color"

[node name="ColorPickerButton" type="ColorPickerButton" parent="HBoxContainer"]
margin_left = 557.0
margin_right = 597.0
margin_bottom = 20.0
rect_min_size = Vector2( 40, 0 )
focus_mode = 0
enabled_focus_mode = 0
color = Color( 0.333333, 0.333333, 0.333333, 1 )

[node name="minViewport" type="Viewport" parent="."]
size = Vector2( 200, 200 )
render_target_v_flip = true

[node name="minViewport_paper" type="ColorRect" parent="minViewport"]
margin_right = 1000.0
margin_bottom = 1000.0
color = Color( 0.333333, 0.333333, 0.333333, 1 )

[node name="TextureRect" type="TextureRect" parent="minViewport"]
margin_right = 40.0
margin_bottom = 40.0
flip_v = true

[node name="exportImageViewport" type="Viewport" parent="."]
size = Vector2( 100, 100 )
transparent_bg = true
handle_input_locally = false
render_target_v_flip = true
render_target_update_mode = 3

[node name="exportImageViewport_paper" type="ColorRect" parent="exportImageViewport"]
margin_right = 1000.0
margin_bottom = 1000.0
color = Color( 0, 1, 0.815686, 1 )

[connection signal="focus_exited" from="HBoxContainer3/width" to="." method="_on_width_focus_exited"]
[connection signal="focus_exited" from="HBoxContainer3/height" to="." method="_on_height_focus_exited"]
[connection signal="pressed" from="HBoxContainer2/Button" to="." method="_on_Button_pressed"]
[connection signal="popup_closed" from="HBoxContainer/ColorPickerButton" to="." method="_on_ColorPickerButton_popup_closed"]
